@@ -340,3 +340,4 @@ Fixes:
     * Evas: Fix bs if app call image object update add after call api like fileset.
     * Evas: Fix evas_gl direct rendering to support partial redraw.
     * Evas textblock: Fixed issue with textblocks without fonts segfaulting.
+    * Evas: Fix evas_common_convert_yuv_42* functions to actually return the converted data.
